<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fragment_weather"
             tools:context=".WeatherFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:textColor="@color/textBright_darkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:id="@+id/date"
                app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:onClick="getTheWeather"
                android:textColor="@color/textBright_darkTheme"
                android:text="@string/city"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/city"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/time"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:textColor="@color/textBright_darkTheme"
                android:text="@string/time"
                android:textSize="55sp"
                android:layout_width="144dp"
                android:layout_height="76dp" android:id="@+id/time"
                android:layout_marginLeft="141dp" android:layout_marginStart="141dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="141dp"
                android:layout_marginRight="141dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
        <TextView
                android:textColor="@color/textBright_darkTheme"
                android:text="@string/temperature"
                android:textSize="100sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/current_temperature"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/current_weather_icon"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"/>
        <TextView
                android:textColor="@color/textBright_darkTheme"
                android:text="@string/temperature_unit"
                android:textSize="100sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/temperature_unit"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/current_weather_icon"
                app:layout_constraintStart_toEndOf="@+id/current_temperature"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cloud_bright"
                android:id="@+id/current_weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/city" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" android:contentDescription="@string/cloud"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/menu_bright"
                android:id="@+id/menu_button"
                android:onClick="citySelector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="4dp" android:layout_marginStart="4dp" android:layout_marginTop="4dp"
                android:contentDescription="@string/menu" tools:ignore="OnClick"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/settings_bright"
                android:id="@+id/settings_button"
                android:onClick="openSettingsFragment"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                android:contentDescription="@string/settings"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>