<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background"
>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:id="@+id/date"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/city"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/city"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/time"
            android:textSize="55sp"
            android:layout_width="144dp"
            android:layout_height="76dp" android:id="@+id/time"
            android:layout_marginLeft="141dp" android:layout_marginStart="141dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_cloud_queue_black_24dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/city" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" android:contentDescription="TODO"/>
    <TextView
            android:text="@string/temperature"
            android:textSize="100sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>